--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
 		"@babel/core": "^7.11.4",
 		"@babel/preset-env": "^7.11.0",
 		"babel-loader": "^8.1.0",
+		"clean-webpack-plugin": "^3.0.0",
 		"eslint": "^7.7.0",
+		"html-webpack-plugin": "^4.4.1",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12",
 		"webpack-merge": "^5.1.2"
+	},
+	"dependencies": {
+		"path": "^0.12.7"
 	}
 }
