--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
 		"@babel/preset-env": "^7.11.0",
 		"babel-loader": "^8.1.0",
 		"clean-webpack-plugin": "^3.0.0",
+		"css-loader": "^4.2.2",
 		"eslint": "^7.7.0",
+		"file-loader": "^6.1.0",
 		"html-webpack-plugin": "^4.4.1",
+		"style-loader": "^1.2.1",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12",
 		"webpack-merge": "^5.1.2"
