--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"webpack-merge": "^5.1.2"
 	},
 	"dependencies": {
-		"path": "^0.12.7"
+		"firebase": "^7.20.0",
+		"path": "^0.12.7",
+		"regenerator-runtime": "^0.13.7"
 	}
 }
